[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/rat.png" type="Texture" id=1]
[ext_resource path="res://scenes/mechanics/Enemy/Rat.gd" type="Script" id=2]
[ext_resource path="res://scenes/mechanics/KillZone.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 2.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 3 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.5, 4.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2, 1 )

[node name="Rat" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
frames = SubResource( 4 )
animation = "idle"
playing = true

[node name="KillZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="KillZone" index="0"]
position = Vector2( 0, -3.5 )
shape = SubResource( 6 )

[node name="RightSideDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSideDetector"]
position = Vector2( 7, -4 )
shape = SubResource( 7 )

[node name="LeftSideDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSideDetector"]
position = Vector2( -7, -4 )
shape = SubResource( 7 )

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
position = Vector2( 0.5, -4.5 )
shape = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 5 )

[node name="LeftDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2( -8, 1 )
shape = SubResource( 9 )

[node name="RightDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDetector"]
position = Vector2( 8, 1 )
shape = SubResource( 10 )

[editable path="KillZone"]
